02-orquestacion/02-distributed/manifests/todo-app-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
  labels:
    app: todo-api
spec:  
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api
        image: dmpinero/todo-api-distributed:v1
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
