02-orquestacion/02-distributed/manifests/todo-app-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-api-service
spec:
  selector:
    app: todo-api
  ports:
  - port: 3000
    targetPort: 3000
    name: http
    protocol: TCP
  type: NodePort
