02-orquestacion/02-distributed/manifests/todo-app-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-front-service
spec:
  selector:
    app: todo-app-front  
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
