02-orquestacion/02-distributed/manifests/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  labels:
    name: todo
  annotations:
      INGRESS.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: lc.todo.info
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: todo-app-front-service
            port: 
             number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: todo-app-api-service
            port: 
              number: 3000
